[package]
name = "dynamic_hash_ring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_derive = "1"
foca = { version = "0.1", features = ["postcard-codec"]}
hash_ring = "0.2"
tokio = {version = "1.15", features = ["sync", "net", "rt", "time", "macros", "rt-multi-thread"]}
bytes = "1.1"
log = "0.4"
async-trait = "0.1"
rand = "0.8"
futures = "0.3.19"
uuid = { version = "0.8", features = ["serde", "v4"] }
lazy_static = "1.4.0"
once_cell = "1.9.0"
env_logger = "0.9"